Fix popularity filter broken in Chrome

--- a/css/main.css
+++ b/css/main.css
@@ -88,10 +88,6 @@ body {
     font-size: 8pt;
 }
 
-.popularity-filter {
-    fill: rgba(255, 0, 0, 25%);
-}
-
 .vibrate-frequency-1 {
   animation-duration: 1.5s
 }
